// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Primary story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#081F32",
        "borderColor": "#34C759",
        "borderRadius": 16,
        "borderWidth": 2,
        "gap": 0,
        "height": 50,
        "left": 26,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "top": 100,
        "width": 323,
      },
    ]
  }
  variant="large-dark"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={1}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      buttonVariant="large-dark"
      style={
        [
          {
            "color": "#081F32",
          },
          {
            "fontFamily": undefined,
          },
          [
            {
              "color": "#34C759",
              "fontSize": 17,
              "fontWeight": "600",
              "letterSpacing": -0.41,
              "lineHeight": 22,
            },
          ],
        ]
      }
    >
      GET THE INSTRUCTIONS
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders Secondary story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#34C759",
        "borderColor": "",
        "borderRadius": 16,
        "borderWidth": 0,
        "gap": 0,
        "height": 50,
        "left": 26,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "top": 100,
        "width": 323,
      },
    ]
  }
  variant="large"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={2}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      buttonVariant="large"
      style={
        [
          {
            "color": "#081F32",
          },
          {
            "fontFamily": undefined,
          },
          [
            {
              "fontSize": 17,
              "fontWeight": "600",
              "letterSpacing": -0.41,
              "lineHeight": 22,
            },
          ],
        ]
      }
    >
      START PROTOTYPE
    </Text>
  </RNGestureHandlerButton>
</View>
`;

exports[`renders Small story 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#5856D6",
        "borderColor": "",
        "borderRadius": 16,
        "borderWidth": 0,
        "gap": 10,
        "height": 28,
        "left": 107,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
        "top": 8,
        "width": 66,
      },
    ]
  }
  variant="small"
>
  <RNGestureHandlerButton
    activeOpacity={0.105}
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    handlerTag={3}
    handlerType="NativeViewGestureHandler"
    onActiveStateChange={[Function]}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "borderRadius": 16,
        "height": 48,
        "justifyContent": "center",
      }
    }
    underlayColor="black"
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "black",
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderRadius": 16,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <Text
      buttonVariant="small"
      style={
        [
          {
            "color": "#081F32",
          },
          {
            "fontFamily": undefined,
          },
          [
            {
              "color": "#FFFFFF",
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": -0.08,
              "lineHeight": 18,
              "marginTop": -20,
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      APPLY
    </Text>
  </RNGestureHandlerButton>
</View>
`;
